add project link

--- a/index.html
+++ b/index.html
@@ -198,8 +198,7 @@
                     <ul class="list-inline dev-icons">
                         <li class="list-inline-item"><i class="fab fa-python"></i></li>
                         <li class="list-inline-item"><i class="fab fa-node-js"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-python"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-node-js"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-java"></i></li>
                         <li class="list-inline-item"><i class="fab fa-html5"></i></li>
                         <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
                         <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
@@ -259,18 +258,20 @@
 
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Orientation Committee Admin</h3>
-                            <div class="subheading mb-3">Foundation for International Understanding Through Students</div>
-                            <ul class="fa-ul mb-0">
-                                <li>
-                                    <span class="fa-li"><i class="fas fa-chevron-right"></i></span>
-                                    Coordinated welcoming and orientation events along with Q&A sessions for assisting the onboarding transition of
-                                    incoming international students at the University of Washington for Fall 2020.
-                                </li>
-                            </ul>
+
+                            <h3 class="mb-0"><a href="https://github.com/hpquynhuw/PortfolioVisualizer">Portfolio Visualizer</a></h3>
+                            <div class="subheading mb-3">Personal Project</div>
+                                <p>
+                                    Using Python to create an interactive financial charting dashboard and allow users to simulate portfolio
+                                    diversification scenarios. Users can compare returns history of the top 5 S&P 500 stocks (AAPL, AMZN, FB, TSLA, MSFT).
+                                    The goal of this project is to help introduce portfolio diversification to newbies in Finance and utilize optimization
+                                    analysis in several scenarios. <br> <br>
+                                    Upcoming features: Try out different weights strategies, and see actual optimal weights (rebalance monthly, yearly, or no rebalance options).
+                                 </p>
+                                 <div class="subheading mb-3" style="text-align: right; font-size: 1.25rem">Toolbox: Pandas, Plotly, Dash, Dash Bootstrap Components, CSS</div>
                         </div>
-                        <div class="flex-shrink-0" style="text-align: right"><span class="text-primary">Seattle, WA</span> <br>
-                            <span class="text-primary">June 2020 - September 2020</span></div>
+                        <!-- <div class="flex-shrink-0" style="text-align: right"><span class="text-primary">Seattle, WA</span> <br>
+                            <span class="text-primary">June 2020 - September 2020</span></div> -->
                     </div>
                 </div>
             </section>
