add photo captions

--- a/index.html
+++ b/index.html
@@ -233,18 +233,18 @@
                     <p>In my free time, I enjoy reading fiction, honing my foreign language skills, and exploring new food spots in town.
                     When it's sunny out in Seattle (sometimes), I enjoy hiking and biking with friends. </p>
 
-                    <p class="mb-0">I'm a travelor at heart and love taking plenty of photos as my treasured memory tokens! Here are some of my favorite photos:</p>
+                    <p class="mb-0">I'm a travelor at heart and love taking plenty of photos as my treasured memory tokens! Here are some of my favorite photos! You can click to see where these are taken.</p>
 
                     <div class="photo-gallery">
                         <div class="container">
                             <div class="row photos">
-                                <div class="col-sm-6 col-md-4 col-lg-3 item3"><a href="assets/img/pic1.jpg" data-lightbox="photos"><img class="img-fluid" src="assets/img/pic1.jpg"></a></div>
-                                <div class="col-sm-6 col-md-4 col-lg-3 item3"><a href="assets/img/pic2.jpg" data-lightbox="photos"><img class="img-fluid" src="assets/img/pic2.jpg"></a></div>
-                                <div class="col-sm-6 col-md-4 col-lg-3 item3"><a href="assets/img/pic3.jpg" data-lightbox="photos"><img class="img-fluid" src="assets/img/pic3.jpg"></a></div>
-                                <div class="col-sm-6 col-md-4 col-lg-3 item3"><a href="assets/img/pic4.jpg" data-lightbox="photos"><img class="img-fluid" src="assets/img/pic4.jpg"></a></div>
-                                <div class="col-sm-6 col-md-4 col-lg-3 item3"><a href="assets/img/pic5.jpg" data-lightbox="photos"><img class="img-fluid" src="assets/img/pic5.jpg"></a></div>
-                                <div class="col-sm-6 col-md-4 col-lg-3 item3"><a href="assets/img/pic6.jpg" data-lightbox="photos"><img class="img-fluid" src="assets/img/pic6.jpg"></a></div>
-                                <div class="col-sm-6 col-md-4 col-lg-3 item3"><a href="assets/img/pic7.jpg" data-lightbox="photos"><img class="img-fluid" src="assets/img/pic7.jpg"></a></div>
+                                <div class="col-sm-6 col-md-4 col-lg-3 item3"><a href="assets/img/pic1.JPG" data-lightbox="photos" data-title="Sapa, Northern Vietnam"><img class="img-fluid" src="assets/img/pic1.JPG"></a></div>
+                                <div class="col-sm-6 col-md-4 col-lg-3 item3"><a href="assets/img/pic2.JPG" data-lightbox="photos" data-title="Hoi An, Central Vietnam"><img class="img-fluid" src="assets/img/pic2.JPG"></a></div>
+                                <div class="col-sm-6 col-md-4 col-lg-3 item3"><a href="assets/img/pic3.JPG" data-lightbox="photos" data-title="Trang An, Northern Vietnam"><img class="img-fluid" src="assets/img/pic3.JPG"></a></div>
+                                <div class="col-sm-6 col-md-4 col-lg-3 item3"><a href="assets/img/pic4.JPG" data-lightbox="photos" data-title="Fansipan Cable Ride, Vietnam"><img class="img-fluid" src="assets/img/pic4.JPG"></a></div>
+                                <div class="col-sm-6 col-md-4 col-lg-3 item3"><a href="assets/img/pic5.jpg" data-lightbox="photos" data-title="Shilin, Yunnan"><img class="img-fluid" src="assets/img/pic5.jpg"></a></div>
+                                <div class="col-sm-6 col-md-4 col-lg-3 item3"><a href="assets/img/pic6.jpg" data-lightbox="photos" data-title="Lijiang, Yunnan"><img class="img-fluid" src="assets/img/pic6.jpg"></a></div>
+                                <div class="col-sm-6 col-md-4 col-lg-3 item3"><a href="assets/img/pic7.jpg" data-lightbox="photos" data-title="Theseus Lake, Washington"><img class="img-fluid" src="assets/img/pic7.jpg"></a></div>
                             </div>
                         </div>
                     </div>
