add profile links

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 
 
                     <div class="social-icons">
-                        <a class="social-icon" href="#"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="#"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="https://www.linkedin.com/in/hpquynh-uw/"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="https://github.com/hpquynhuw"><i class="fab fa-github"></i></a>
                     </div>
                 </div>
             </section>
