--- a/index.html
+++ b/index.html
@@ -270,8 +270,21 @@
                                  </p>
                                  <div class="subheading mb-3" style="text-align: right; font-size: 1.25rem">Toolbox: Pandas, Plotly, Dash, Dash Bootstrap Components, CSS</div>
                         </div>
-                        <!-- <div class="flex-shrink-0" style="text-align: right"><span class="text-primary">Seattle, WA</span> <br>
-                            <span class="text-primary">June 2020 - September 2020</span></div> -->
+
+                        <div class="flex-grow-1">
+
+                            <h3 class="mb-0"><a href="https://github.com/hpquynhuw/TweetSysis">Tweet Trendsyis</a></h3>
+                            <div class="subheading mb-3">Personal Project</div>
+                                <p>
+                                    Using Flask to fetch region hashtag trends from Twitter API, obtain sample of popular tweets for quick sentimal analysis
+                                    with spaCy TextBlob and torchMoji (describing text with emojis). Users can explore a diversified trending topics and gain a better 
+                                    viewpoint on international news.  
+                                     <br> <br>
+                                    Upcoming features: Try out different language detection and analysis, emoji application.
+                                 </p>
+                                 <div class="subheading mb-3" style="text-align: right; font-size: 1.25rem">Toolbox: Flask, Python, TwitterAPI, spaCy</div>
+                        </div>
+                        
                     </div>
                 </div>
             </section>
