--- a/index.html
+++ b/index.html
@@ -269,22 +269,39 @@
                                     Upcoming features: Try out different weights strategies, and see actual optimal weights (rebalance monthly, yearly, or no rebalance options).
                                  </p>
                                  <div class="subheading mb-3" style="text-align: right; font-size: 1.25rem">Toolbox: Pandas, Plotly, Dash, Dash Bootstrap Components, CSS</div>
-                        </div>                    
+                        </div>
                     </div>
 
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5"></div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
 
                             <h3 class="mb-0"><a href="https://github.com/hpquynhuw/TweetSysis">Tweet Trendsyis</a></h3>
                             <div class="subheading mb-3">Personal Project</div>
                                 <p>
                                     Using Flask to fetch region hashtag trends from Twitter API, obtain sample of popular tweets for quick sentimal analysis
-                                    with spaCy TextBlob and torchMoji (describing text with emojis). Users can explore a diversified trending topics and gain a better 
-                                    viewpoint on international news.  
+                                    with spaCy TextBlob and torchMoji (describing text with emojis). Users can explore a diversified trending topics and gain a better
+                                    viewpoint on international news.
                                     <br> <br>
                                     Upcoming features: Try out different language detection and analysis, emoji application.
                                 </p>
                                 <div class="subheading mb-3" style="text-align: right; font-size: 1.25rem">Toolbox: Flask, Python, TwitterAPI, spaCy</div>
+                        </div>
+                    </div>
+
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+
+                            <h3 class="mb-0"><a href="https://app.powerbi.com/view?r=eyJrIjoiNWNkYTE0MTItMzk4NC00OTVkLTg3NzgtZmQxMTAyMjQzYzQ2IiwidCI6ImY2YjZkZDViLWYwMmYtNDQxYS05OWEwLTE2MmFjNTA2MGJkMiIsImMiOjZ9">
+                                COVID-19 Dashboard</a></h3>
+                            <div class="subheading mb-3">Personal Project</div>
+                                <p>
+                                    Using dataset from the CDC on COVID-19 cases and deaths to create an informative dashboard on cases and deaths by COVID-19 by
+                                    states and counties. User can select individual state to view COVID cases and deaths in addition
+                                    to seeing time series of the growth overtime.
+                                    <br> <br>
+                                    Upcoming features: Add in vaccinations data.
+                                </p>
+                                <div class="subheading mb-3" style="text-align: right; font-size: 1.25rem">Toolbox: PowerBI</div>
                         </div>
                     </div>
                 </div>
