--- a/index.html
+++ b/index.html
@@ -198,6 +198,7 @@
                     <ul class="list-inline dev-icons">
                         <li class="list-inline-item"><i class="fab fa-python"></i></li>
                         <li class="list-inline-item"><i class="fab fa-node-js"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-vuejs"></i></li>
                         <li class="list-inline-item"><i class="fab fa-java"></i></li>
                         <li class="list-inline-item"><i class="fab fa-html5"></i></li>
                         <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
@@ -284,7 +285,7 @@
                                     <br> <br>
                                     Upcoming features: Try out different language detection and analysis, emoji application.
                                 </p>
-                                <div class="subheading mb-3" style="text-align: right; font-size: 1.25rem">Toolbox: Flask, Python, TwitterAPI, spaCy</div>
+                                <div class="subheading mb-3" style="text-align: right; font-size: 1.25rem">Toolbox: Vue.js, Flask, Python, TwitterAPI, spaCy</div>
                         </div>
                     </div>
 
